remove extra title spacing from lists.css - cause issues when navigating back to other pages

--- a/src/routes/lists/lists.css
+++ b/src/routes/lists/lists.css
@@ -10,10 +10,6 @@
     margin: 0 1%;
 }
 
-h1 {
-    height: 2.5em;
-}
-
 h4 {
     margin-bottom: 0.8em;
 }
